--- a/docs/src/_data/api/entities/rendered_scenario_entity.yml
+++ b/docs/src/_data/api/entities/rendered_scenario_entity.yml
@@ -1,17 +1,40 @@
 ---
 name: RenderedScenarioEntity
 path: Lookbook::RenderedScenarioEntity
-description: Represents a **rendered** preview scenario
-methods: []
-groups: []
-type: class
-category: entity
-tags:
+description: |-
+  Represents a **rendered** preview scenario.
+
+  Extends ScenarioEntity with an `output`
+  method that returns the rendered HTML output.
+
+  See the [ScenarioEntity](./scenario_entity) docs for other available methods.
+methods:
+- id: output-instance-method
+  name: output
+  path: Lookbook::RenderedScenarioEntity#output
+  signature: output
+  signature_call: output
+  signature_args: ''
+  description: HTML output of the rendered scenario.
+  return_types: String
+  scope: instance
+  tags:
   - name:
     tag_name: api
     text: public
     types:
   - name:
-    tag_name: ignore
-    text: methods
-    types:
+    tag_name: return
+    text: Rendered output
+    types: String
+  klass: RenderedScenarioEntity
+  group:
+  aliases: []
+groups: []
+type: class
+category: entity
+tags:
+- name:
+  tag_name: api
+  text: public
+  types:
